--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Netflix</title>
 
-    <script src="index.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="Netflix_homepage/index.js"></script>
+    <link rel="stylesheet" href="Netflix_homepage/style.css">
 
 </head>
 <body>
