--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div class="nav">
         <div class="nav_left">
             <a href="index.html">
-                <img class="nav_logo" src="logo.png" alt="">
+                <img class="nav_logo" src="Netflix_homepage/logo.png" alt="">
             </a>
         </div>
         <div class="nav_right">
-            <img src="Netflix-avatar.png" class="nav_avatar" alt="">
+            <img src="Netflix_homepage/Netflix-avatar.png" class="nav_avatar" alt="">
         </div>
     </div>
     <!--banner-->
